--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@headlessui/vue": "^1.7.13",
-    "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
     "@vueuse/core": "^10.1.2",
     "md-editor-v3": "^4.0.1",
