Lots of stuff and things

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "swagger": "npx swagger-typescript-api -p https://electric-raspberry.ngrok.app/swagger/v1/swagger.json -o ./src/api -n electric-raspberry.ts --axios",
     "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
@@ -19,11 +20,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "@headlessui/vue": "^1.7.13",
+    "@microsoft/signalr": "^7.0.7",
     "@tailwindcss/forms": "^0.5.3",
     "@vueuse/core": "^10.1.2",
-    "md-editor-v3": "^4.0.1",
+    "axios": "^1.4.0",
+    "md-editor-v3": "^4.2.0",
     "pinia": "^2.0.36",
-    "primevue": "^3.29.2",
+    "swagger-typescript-api": "^12.0.4",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
     "vue": "^3.3.2",
