--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.8",
     "@types/uuid": "^9.0.1",
+    "@types/markdown-it": "^12.2.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
