--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@vueuse/core": "^10.1.2",
     "axios": "^1.4.0",
-    "md-editor-v3": "^4.2.0",
+    "md-editor-v3": "^4.6.1",
     "pinia": "^2.0.36",
     "swagger-typescript-api": "^12.0.4",
     "unique-names-generator": "^4.7.1",
@@ -35,9 +35,9 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.1",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.16.8",
     "@types/uuid": "^9.0.1",
-    "@types/markdown-it": "^12.2.3",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
@@ -46,7 +46,8 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.30",
+    "postcss-preset-env": "^9.1.4",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
