--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
+    "vitest": "^0.34.5",
     "vue-tsc": "^1.6.4"
   }
 }
